fixed layout shift

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ section.best-sellers {
     padding-top: 80px;
 }
 
-section.best-sellers h1 {
+section.best-sellers h2 {
     text-align: center;
     font-size: 34px;
     letter-spacing: 0.85px;
@@ -292,6 +292,7 @@ section.best-sellers .product-slider .product {
 
 section.best-sellers .product-slider .product img {
     max-width: 40%;
+    height: auto;
 }
 
 section.best-sellers .product-slider .product .product-picture {
@@ -559,7 +560,7 @@ footer .copyright-text {
         padding-top: 50px;
     }
     
-    section.best-sellers h1 {
+    section.best-sellers h2 {
         font-size: 28px;
         letter-spacing: 0.7px;
         line-height: 38px;
@@ -703,7 +704,7 @@ footer .copyright-text {
         max-width: 360px;
     }
 
-    section.best-sellers h1 {
+    section.best-sellers h2 {
         font-size: 36px;
         letter-spacing: 0.6px;
         line-height: 38px;
